# Video-Clipper

./: .gitignore  README.md
Project_1/: CMakeLists.txt  CPU_watcher.cpp  event_notifier.cpp  video_clipper.cpp  video_processor.cpp
Project_1/common/: sharedFrame.cpp  sharedFrame.hpp
